2016-07-20 - 1.3.1:
 - Maintainer change to Pixel Federation
 - Mesos DNS version changed to 0.5.2

2016-01-22 - 1.3.0:
 - Use new Ubuntu base image.
 - Consul template and envconsul support added

2015-12-18 - 1.2.1:
 - Fixed bug with ipsources not being added correctly.

2015-12-05 - 1.2.0:
 - Bump to Mesos-DNS 0.5.1
 - Use ubuntu-base 1.0.2
 - Add logrotate support

2015-10-19 - 1.1.0:
  - Mesos DNS bumped to 0.4.0
  - Reworked Dockerfile to use binary instead of compiling
  - Fixed minor error in docs