@@ -1,3 +1,6 @@
+2017-07-03 - 1.3.2:
+ - Mesos DNS version changed to 0.6.0
+
 2016-07-20 - 1.3.1:
  - Maintainer change to Pixel Federation
  - Mesos DNS version changed to 0.5.2
